# um-meeting-ai

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package.json
apps/agent/: Dockerfile  README.md  agent.py  prompts.py  pyproject.toml
apps/api/: Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  auth.py  calendar_service.py  client_directory_service.py  config.py  conversation_service.py  copilot.py  database.py  dev_console_service.py  email_service.py  intervention_service.py  knowledge_service.py  main.py  memory_service.py  models.py  processing_service.py  recording_service.py  sales_coach_service.py  store.py  voice_channel_service.py  web_search_service.py  whatsapp_group_service.py  whatsapp_service.py  xiaozhi_mcp_bridge.py
apps/web/: README.md  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/coevo-labs/: page.tsx
apps/web/app/coevo-meet/: coevo-meet-landing.tsx  page.tsx
apps/web/app/coevo-meet/sucesso/: page.tsx
apps/web/app/dev-console/: page.tsx
apps/web/app/home-v2/: page.tsx
apps/web/app/meeting-ended/: page.tsx
apps/web/app/meeting/[id]/: meeting-client.tsx  page.tsx
deploy/: railway-agent.toml  railway-api.toml
docs/: README.md  architecture.md  client-directory.md  deployment.md  mvp-scope.md  recording-monitoring.md  smart-speaker-websocket.md  xiaozhi-mcp-bridge.md
docs/smart-speaker/firmware/: README.md
docs/smart-speaker/firmware/coevo_speaker_audio_roundtrip/: coevo_speaker_audio_roundtrip.ino
